<resources>
    <string name="app_name">ByMeApp</string>
    <string name="my_services_requests">My services requests</string>
    <string name="title_activity_user_services_req">UserServicesReq</string>
    <string name="title_service_req_form">Your service requests</string>
    <string name="delivery_date_and_time">delivery date and time</string>
    <string name="service_request_description">service request description</string>
    <string name="place_where_service_should_be_performed">place where service should be performed</string>
    <string name="proposed_gain">payment for this service:</string>
    <string name="delivery_place">Delivery place</string>
    <string name="short_service_request_description">short service request description</string>
    <string name="last_services_requests">Last services requests:</string>
    <string name="add_offer">add Offer</string>
    <string name="insert">insert</string>
    <string name="contact_infos">contact infos</string>
    <string name="my_offer_list">My Offers</string>
    <string name="svc_offer_list">Received offers</string>
    <string name="my_offers">My offers</string>
    <string name="sign_out">Sign Out</string>
    <string name="proposed_gain_offer">cost:</string>
    <string name="set_status">set status</string>
    <string name="when_str">when:</string>
    <string name="where_str">where:</string>
    <string name="accepted_str">Accepted</string>
    <string name="last_5_requests">Last 5 requests:</string>
    <string name="gain_str">gain:</string>
    <string name="currency_symbol">$</string>
    <string name="offer_on_service">Offer on service:</string>
    <string name="insert_caption_btn">Insert</string>
    <string name="notes_str">Notes</string>
    <string name="time_str">time:</string>
    <string name="delivery_date_str">delivery date:</string>
    <string name="proposed_gain_str">proposed gain:</string>
    <string name="delivery_place_str">delivery place:</string>
    <string name="offers_str">Offers</string>
    <string name="no_offers_found_str">No offers found</string>
    <string name="add_offer_str">add offer</string>
    <string name="see_offer_str">see offers</string>
    <string name="hint_deliveryPlace_et">where the service should be delivered</string>
    <string name="hint_deliveredDate_et"> delivery date</string>
    <string name="hint_proposedGain">money gain</string>
    <string name="hint_deliveryTime_et">delivery time</string>
    <string name="hint_notes_et">offer notes</string>
    <string name="hit_offer_insertButton">DB insert offer</string>
    <string name="discarded_str">Discarded</string>
    <string name="none_str">None</string>
    <string name="noRecords_lbl_text_str">No offers found</string>
    <string name="widget_services_lists_contentDescription">widget services lists</string>
    <string name="offer_status_button_str">update offer status</string>
    <string name="add_offer_button_str">add offer</string>
    <string name="see_offer_button_str">see offers</string>
    <string name="Offer_added_toast_msg">Offer added</string>
    <string name="Service_request_added_Toast_msg">Service request added</string>
    <string name="log_service_refresh_str">refreshing data in background</string>
    <string name="broadcasat_log_received_data_str">received from BroadCastreceiver</string>
    <string name="fab_service_req_content_description">inserting services requests</string>
    <string name="service_form_button_insert_content_description">register a service request in DB</string>
    <string name="offer_list_button_str">see or add service requests\'s offers</string>
</resources>
