<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clOfferForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".OfferFormActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/offerOn_lbl"
                style="@style/ByMeAppTextViewStyle.FormTextTitles"
                android:layout_width="0dp"
                android:layout_height="@dimen/offerOn_lbl_height"
                android:layout_marginTop="@dimen/margin_60dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:text="@string/offer_on_service"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="64dp" />

            <TextView
                android:id="@+id/serviceDescr_lbl"
                android:background="@color/colorPrimaryLight2"
                android:layout_width="0dp"
                android:layout_height="@dimen/serviceDescr_lbl_height"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:textAlignment="center"
                android:textSize="@dimen/textSize_18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/offerOn_lbl"
                tools:text="service description" />

            <TextView
                android:id="@+id/deliveryPlace_lbl"
                android:layout_width="@dimen/deliveryPlace_lbl_width"
                android:layout_height="@dimen/deliveryPlace_lbl_height"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/deliveryPlace_lbl_marginTop"
                android:gravity="center_vertical"
                android:text="@string/delivery_place_str"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serviceDescr_lbl" />

            <EditText
                android:id="@+id/deliveryPlace_et"
                style="@style/ByMeAppTextViewStyle.FormEditText"
                android:layout_width="@dimen/deliveryPlace_et_width"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/deliveryPlace_et_marginTop"
                android:inputType="text"
                android:maxLength="35"
                app:layout_constraintStart_toEndOf="@+id/deliveryPlace_lbl"
                app:layout_constraintTop_toBottomOf="@+id/serviceDescr_lbl"
                tools:text="delivery place example"
                android:hint="@string/hint_deliveryPlace_et"/>

            <TextView
                android:id="@+id/deliveryDate_lbl"
                android:layout_width="@dimen/deliveryDate_lbl_width"
                android:layout_height="@dimen/deliveryDate_lbl_height"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:gravity="center_vertical"
                android:text="@string/proposed_gain_str"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <TextView
                android:id="@+id/proposedGain_lbl"
                android:layout_width="@dimen/proposedGain_lbl_width"
                android:layout_height="@dimen/proposedGain_lbl_height"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:gravity="center_vertical"
                android:text="@string/delivery_date_str"
                android:textSize="@dimen/textSize_15dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/deliveryDate_et"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <EditText
                android:id="@+id/deliveryDate_et"
                style="@style/ByMeAppTextViewStyle.FormEditText"
                android:layout_width="@dimen/deliveryDate_et_width"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:inputType="date"
                android:maxLength="10"
                app:layout_constraintStart_toEndOf="@+id/proposedGain_lbl"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                tools:text="10/12/2018"
                android:hint="@string/hint_deliveredDate_et"/>

            <EditText
                android:id="@+id/proposedGain_et"
                style="@style/ByMeAppTextViewStyle.FormEditText"
                android:layout_width="@dimen/proposedGain_et_width"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:inputType="numberDecimal"
                android:maxLength="12"
                app:layout_constraintStart_toEndOf="@+id/deliveryDate_lbl"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                android:hint="@string/hint_proposedGain"/>

            <TextView
                android:id="@+id/time_lb"
                android:layout_width="@dimen/time_lb_width"
                android:layout_height="@dimen/time_lb_height"
                android:layout_marginStart="@dimen/margin_4dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:gravity="center_vertical"
                android:text="@string/time_str"
                android:textSize="@dimen/textSize_15dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/deliveryDate_et"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <EditText
                android:id="@+id/deliveryTime_et"
                style="@style/ByMeAppTextViewStyle.FormEditText"
                android:layout_width="@dimen/deliveryTime_et_width"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:inputType="time"
                app:layout_constraintStart_toEndOf="@+id/time_lb"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                tools:text="10:30"
                android:hint="@string/hint_deliveryTime_et"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="245dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="185dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="305dp" />

            <EditText
                android:id="@+id/notes_et"
                android:paddingTop="@dimen/padding_2dp"
                android:layout_width="@dimen/notes_et_width"
                android:layout_height="@dimen/notes_et_height"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:inputType="textMultiLine|textWebEditText"
                android:textSize="@dimen/textSize_15dp"
                android:maxLength="180"
                android:maxLines="6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notes_lbl"
                android:hint="@string/hint_notes_et"/>

            <TextView
                android:id="@+id/notes_lbl"
                style="@style/ByMeAppTextViewStyle.FormTextTitles"
                android:layout_width="0dp"
                android:layout_height="@dimen/notes_lbl_height"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/notes_str"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <Button
                android:id="@+id/insertButton"
                android:layout_width="@dimen/insertButton_offer_width"
                android:layout_height="@dimen/insertButton_offer_height"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/insert_caption_btn"
                android:onClick="InsertDB_BtnClick"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notes_et"
                android:contentDescription="@string/hit_offer_insertButton"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>