<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfferStatusFormActivity">


    <RadioGroup
        android:id="@+id/offer_rg"
        android:layout_width="@dimen/offer_rg_width"
        android:layout_height="@dimen/offer_rg_height"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/accepted_rb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/offer_rg_button_height"
            android:layout_weight="1"
            android:text="@string/accepted_str"
            android:textSize="@dimen/textSize_22dp" />

        <RadioButton
            android:id="@+id/dismissed_rb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/offer_rg_button_height"
            android:layout_weight="1"
            android:text="@string/discarded_str"
            android:textSize="@dimen/textSize_22dp" />

        <RadioButton
            android:id="@+id/none_rb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/offer_rg_button_height"
            android:layout_weight="1"
            android:text="@string/none_str"
            android:textSize="@dimen/textSize_22dp" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="updStatusClick"
        android:text="update offer status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_rg" />
</android.support.constraint.ConstraintLayout>