<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fillViewport="true"
    android:scrollbarStyle="outsideInset">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ServiceReqForm"
        tools:showIn="@layout/activity_service_req_form">

        <TextView
            android:id="@+id/shortDescr_lbl"
            style="@style/ByMeAppTextViewStyle.FormTextTitles"
            android:labelFor="@id/serviceShortDescrTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_60dp"
            android:text="@string/short_service_request_description"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/serviceDescrTv"
            android:layout_width="0dp"
            android:layout_height="@dimen/serviceDescrTv_height"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:inputType="textMultiLine"
            android:paddingTop="0dp"
            android:textSize="@dimen/textSize_14sp"
            android:maxLines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceDescrLabel" />

        <TextView
            android:id="@+id/serviceDescrLabel"
            style="@style/ByMeAppTextViewStyle.FormTextTitles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:labelFor="@id/serviceDescrTv"
            android:text="@string/service_request_description"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceShortDescrTv" />

        <TextView
            android:id="@+id/dateTime_lbl"
            style="@style/ByMeAppTextViewStyle.FormTextTitles"
            android:labelFor="@+id/dateSrvReqTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@string/delivery_date_and_time"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceDescrTv" />

        <EditText
            android:id="@+id/dateSrvReqTv"
            android:layout_width="@dimen/dateSrvReqTv_width"
            android:layout_height="@dimen/dateSrvReqTv_height"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:inputType="date"
            android:textAlignment="center"
            android:textSize="@dimen/textSize_14sp"
            android:maxLength="10"
            app:layout_constraintEnd_toStartOf="@+id/timeSrvReqTv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTime_lbl"
            tools:text="01/01/2018" />

        <EditText
            android:id="@+id/timeSrvReqTv"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:inputType="time"
            android:textAlignment="center"
            android:textSize="@dimen/textSize_14sp"
            android:maxLength="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dateSrvReqTv"
            app:layout_constraintTop_toBottomOf="@+id/dateTime_lbl"
            tools:text="00:00"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/label6"
            style="@style/ByMeAppTextViewStyle.FormTextTitles"
            android:labelFor="@+id/performPlaceTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@string/place_where_service_should_be_performed"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateSrvReqTv" />

        <EditText
            android:id="@+id/performPlaceTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_2dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:inputType="text"
            android:textSize="@dimen/textSize_14sp"
            android:maxLength="70"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label6" />

        <TextView
            android:id="@+id/deliveryPlace_lbl"
            style="@style/ByMeAppTextViewStyle.FormTextTitles"
            android:labelFor="@id/deliveryPlaceTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@string/delivery_place"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/performPlaceTv" />


        <EditText
            android:id="@+id/deliveryPlaceTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:paddingTop="@dimen/padding_2dp"
            android:inputType="text"
            android:textSize="@dimen/textSize_14sp"
            android:maxLength="30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deliveryPlace_lbl" />


        <TextView
            android:id="@+id/proposedGainService_lbl"
            style="@style/ByMeAppTextViewStyle.FormTextTitles"
            android:labelFor="@id/propGainTv"
            android:layout_width="@dimen/proposedSericeGain_lbl_width"
            android:layout_height="@dimen/proposedSericeGain_lbl_height"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:gravity="center_vertical"
            android:padding="0dp"
            android:text="@string/proposed_gain"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deliveryPlaceTv" />

        <EditText
            android:id="@+id/propGainTv"
            android:layout_width="137dp"
            android:layout_height="33dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:inputType="numberDecimal"
            android:maxLength="12"
            android:paddingTop="@dimen/padding_2dp"
            android:textAlignment="textStart"
            android:textSize="@dimen/textSize_14sp"
            app:layout_constraintStart_toEndOf="@+id/proposedGainService_lbl"
            app:layout_constraintTop_toBottomOf="@+id/deliveryPlaceTv"
            tools:text="10.12" />

        <TextView
            android:id="@+id/label8"
            style="@style/ByMeAppTextViewStyle.FormTextTitles"
            android:labelFor="@id/contactInfoTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@string/contact_infos"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/propGainTv" />

        <EditText
            android:id="@+id/contactInfoTv"
            android:layout_width="0dp"
            android:layout_height="@dimen/contactInfoTv_height"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:paddingTop="@dimen/padding_0dp"
            android:textSize="@dimen/textSize_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label8"
            tools:text="contact infos" />


        <EditText
            android:id="@+id/serviceShortDescrTv"
            android:layout_width="0dp"
            android:layout_height="@dimen/serviceShortDescrTv_heigth"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:inputType="text"
            android:textSize="@dimen/textSize_14sp"
            android:maxLength="43"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shortDescr_lbl"
            tools:text="short descriptionshort descriptionshort description" />

        <Button
            android:id="@+id/InsertDB_Btn"
            android:layout_width="@dimen/InsertDB_Btn_width"
            android:layout_height="@dimen/InsertDB_Btn_height"
            android:onClick="InsertDB_BtnClick"
            android:text="@string/insert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactInfoTv" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>